feat: add CLI for simple memory operations
New CLI commands:
- nmem remember "content" - Store a memory with optional tags
- nmem recall "query" - Query memories with spreading activation
- nmem context - Get recent context for AI injection
- nmem stats - Show brain statistics
- nmem brain list/use/create/export/import/delete - Brain management

Features:
- JSON output support (--json flag) for programmatic use
- Persistent storage using JSON files (~/.neural-memory/)
- Multiple brain support
- Integration documentation with coding principles

Files added:
- src/neural_memory/cli/ - CLI module
- docs/integration.md - Integration guide and coding principles

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,6 +36,7 @@ dependencies = [
     "pydantic>=2.0",
     "networkx>=3.0",
     "python-dateutil>=2.8",
+    "typer>=0.9.0",
 ]
 
 [project.optional-dependencies]
@@ -77,6 +78,7 @@ Issues = "https://github.com/neural-memory/neural-memory/issues"
 
 [project.scripts]
 neural-memory = "neural_memory.cli:main"
+nmem = "neural_memory.cli:main"
 
 [tool.hatch.build.targets.sdist]
 include = [
