feat: add MCP server, real-time sharing, and architecture docs
MCP Server:
- Add MCP server for Claude Code integration (nmem mcp command)
- Expose nmem_remember, nmem_recall, nmem_context, nmem_todo, nmem_stats tools
- Add nmem-mcp entry point in pyproject.toml
- 24 unit tests for MCP server

Real-time Brain Sharing:
- Add SharedStorage for HTTP-based remote storage
- Add SyncClient for WebSocket real-time updates
- Add BrainMode config (LOCAL/SHARED/HYBRID modes)
- Add shared CLI commands: enable, disable, status, test, sync
- Add --shared flag to remember/recall commands
- Add WebSocket sync endpoint in server
- 39 unit tests for sharing features

Documentation:
- Add docs/GUIDE.md - Complete user guide
- Add docs/architecture.md - Technical design & scalability roadmap
- Update docs/integration.md - MCP config options for Claude Code
- Update README.md - Link to architecture docs

Tests: 300 total (63 new tests added)

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -79,6 +79,7 @@ Issues = "https://github.com/neural-memory/neural-memory/issues"
 [project.scripts]
 neural-memory = "neural_memory.cli:main"
 nmem = "neural_memory.cli:main"
+nmem-mcp = "neural_memory.mcp:main"
 
 [tool.hatch.build.targets.sdist]
 include = [
