--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,6 +38,7 @@ dependencies = [
     "python-dateutil>=2.8",
     "typer>=0.9.0",
     "aiohttp>=3.9.0",
+    "aiosqlite>=0.19.0",
 ]
 
 [project.optional-dependencies]
