--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,6 +39,7 @@ dependencies = [
     "typer>=0.9.0",
     "aiohttp>=3.9.0",
     "aiosqlite>=0.19.0",
+    "rich>=13.0.0",
 ]
 
 [project.optional-dependencies]
