--- a/vscode-extension/package.json
+++ b/vscode-extension/package.json
@@ -195,15 +195,17 @@
     "package": "vsce package"
   },
   "devDependencies": {
-    "@types/vscode": "^1.85.0",
+    "@types/cytoscape": "^3.21.9",
     "@types/node": "^20.0.0",
+    "@types/vscode": "^1.85.0",
     "@types/ws": "^8.5.0",
-    "typescript": "^5.3.0",
-    "esbuild": "^0.19.0",
     "@vscode/test-electron": "^2.3.0",
-    "@vscode/vsce": "^2.22.0"
+    "@vscode/vsce": "^2.22.0",
+    "esbuild": "^0.19.0",
+    "typescript": "^5.3.0"
   },
   "dependencies": {
+    "cytoscape": "^3.33.1",
     "ws": "^8.16.0"
   }
 }
