feat: sync VS Code extension with codebase indexing features
Add REST endpoint POST /memory/index for scan/status actions, expand
NeuronType to include spatial/sensory/intent, and add Index Codebase
command (Ctrl+Shift+M I) to the VS Code extension with workspace
folder picker and progress notification.

--- a/vscode-extension/package.json
+++ b/vscode-extension/package.json
@@ -82,6 +82,12 @@
         "title": "Recall Related Memories",
         "category": "NeuralMemory",
         "icon": "$(search)"
+      },
+      {
+        "command": "neuralmemory.indexCodebase",
+        "title": "Index Codebase",
+        "category": "NeuralMemory",
+        "icon": "$(search-fuzzy)"
       }
     ],
     "viewsContainers": {
@@ -139,6 +145,11 @@
         "command": "neuralmemory.openGraph",
         "key": "ctrl+shift+m g",
         "mac": "cmd+shift+m g"
+      },
+      {
+        "command": "neuralmemory.indexCodebase",
+        "key": "ctrl+shift+m i",
+        "mac": "cmd+shift+m i"
       }
     ],
     "configuration": {
