feat: eternal context system — 3-tier auto-save, triggers, lazy loading, VS Code integration
- Add BrainPersistence for file-based JSON state at ~/.neuralmemory/eternal/<brain_id>/
- Add TriggerEngine with auto-save on decisions, errors, milestones, user leaving, checkpoints
- Add EternalContext manager with 3-tier state (critical/session/context)
- Add EternalConfig to UnifiedConfig with TOML persistence
- Add nmem_eternal (status/save/load/compact) and nmem_recap (level 1-3, topic) MCP tools
- Wire fire-and-forget triggers into _remember() and _recall()
- Update system prompt with eternal context documentation
- Add VS Code commands: recap, recapTopic, eternalSave, eternalStatus
- Bump version to 0.9.2 (546 tests passing)

--- a/vscode-extension/package.json
+++ b/vscode-extension/package.json
@@ -94,6 +94,30 @@
         "title": "Import Memories from External Source",
         "category": "NeuralMemory",
         "icon": "$(cloud-download)"
+      },
+      {
+        "command": "neuralmemory.recap",
+        "title": "Recap Session Context",
+        "category": "NeuralMemory",
+        "icon": "$(history)"
+      },
+      {
+        "command": "neuralmemory.recapTopic",
+        "title": "Recap by Topic",
+        "category": "NeuralMemory",
+        "icon": "$(search)"
+      },
+      {
+        "command": "neuralmemory.eternalSave",
+        "title": "Save Eternal Context",
+        "category": "NeuralMemory",
+        "icon": "$(save)"
+      },
+      {
+        "command": "neuralmemory.eternalStatus",
+        "title": "Eternal Context Status",
+        "category": "NeuralMemory",
+        "icon": "$(info)"
       }
     ],
     "viewsContainers": {
@@ -156,6 +180,11 @@
         "command": "neuralmemory.indexCodebase",
         "key": "ctrl+shift+m i",
         "mac": "cmd+shift+m i"
+      },
+      {
+        "command": "neuralmemory.recap",
+        "key": "ctrl+shift+m c",
+        "mac": "cmd+shift+m c"
       }
     ],
     "configuration": {
