fix: OpenClaw plugin ID mismatch + configurable timeout + actionable errors
- Add explicit plugin ID in package.json openclaw section to prevent
  ID inference from package name ("openclaw-plugin" vs "neuralmemory")
- Add configurable timeout option (5s-120s) to plugin config schema
- Improve MCP client error messages: ENOENT hints, exit code 1 hints,
  initialize failure now captures and surfaces Python stderr output

--- a/integrations/openclaw-plugin/package.json
+++ b/integrations/openclaw-plugin/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "main": "src/index.ts",
   "openclaw": {
+    "id": "neuralmemory",
     "extensions": ["./src/index.ts"]
   },
   "scripts": {
