--- a/integrations/openclaw-plugin/package.json
+++ b/integrations/openclaw-plugin/package.json
@@ -6,11 +6,16 @@
   "main": "src/index.ts",
   "openclaw": {
     "id": "neuralmemory",
-    "extensions": ["./src/index.ts"]
+    "extensions": [
+      "./src/index.ts"
+    ]
   },
   "scripts": {
     "build": "tsc",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "test": "vitest run",
+    "test:watch": "vitest",
+    "test:coverage": "vitest run --coverage"
   },
   "peerDependencies": {
     "zod": ">=3.0.0"
@@ -37,7 +42,9 @@
   },
   "devDependencies": {
     "@types/node": "^25.2.2",
+    "@vitest/coverage-v8": "^3.2.4",
     "typescript": "^5.9.3",
+    "vitest": "^3.0.0",
     "zod": "^4.3.6"
   }
 }
