fix: default autoStart to true so server starts automatically
Users no longer need to manually configure the port each time
the editor restarts — the extension spawns the server on startup.

--- a/vscode-extension/package.json
+++ b/vscode-extension/package.json
@@ -197,7 +197,7 @@
         },
         "neuralmemory.autoStart": {
           "type": "boolean",
-          "default": false,
+          "default": true,
           "description": "Automatically start the NeuralMemory server on activation"
         },
         "neuralmemory.serverUrl": {
