ci: fix lint parity, release idempotency, and test timeouts
- CI lint now passes: fix 14 lint errors in tests/ (unused imports,
  import sorting, Yoda conditions)
- Release workflow: skip gh release create if tag already exists,
  upload assets to existing release instead
- Add pytest-timeout (60s default) to prevent stuck CI test jobs
- Add timeout-minutes: 15 to CI test job
- Makefile: add verify target matching CI, add format-check,
  fix typecheck to include --ignore-missing-imports

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -71,8 +71,16 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ github.token }}
         run: |
-          gh release create '${{ github.ref_name }}' \
-            --repo '${{ github.repository }}' \
-            --title '${{ github.ref_name }}' \
-            --generate-notes \
-            dist/*
+          if gh release view '${{ github.ref_name }}' --repo '${{ github.repository }}' > /dev/null 2>&1; then
+            echo "Release ${{ github.ref_name }} already exists — uploading assets only."
+            gh release upload '${{ github.ref_name }}' \
+              --repo '${{ github.repository }}' \
+              --clobber \
+              dist/* || true
+          else
+            gh release create '${{ github.ref_name }}' \
+              --repo '${{ github.repository }}' \
+              --title '${{ github.ref_name }}' \
+              --generate-notes \
+              dist/*
+          fi
