--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -47,6 +47,7 @@ jobs:
   test:
     name: Test (Python ${{ matrix.python-version }})
     runs-on: ubuntu-latest
+    timeout-minutes: 15
     strategy:
       fail-fast: false
       matrix:
@@ -64,7 +65,7 @@ jobs:
         run: pip install -e ".[dev,server]"
 
       - name: Run tests
-        run: pytest tests/ -v --cov=neural_memory --cov-report=xml --cov-report=term-missing --cov-fail-under=67
+        run: pytest tests/ -v --timeout=60 --cov=neural_memory --cov-report=xml --cov-report=term-missing --cov-fail-under=67
 
       - name: Upload coverage to Codecov
         if: matrix.python-version == '3.11'
