--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,7 +41,6 @@ dependencies = [
     "aiosqlite>=0.19.0",
     "rich>=13.0.0",
     "typing_extensions>=4.0",
-    "tomli>=2.0; python_version < '3.11'",
 ]
 
 [project.optional-dependencies]
@@ -232,6 +231,7 @@ filterwarnings = [
     "ignore::DeprecationWarning:pyvi",
     "ignore::DeprecationWarning:numpy",
     "ignore:dtype:DeprecationWarning",
+    "ignore:coroutine .* was never awaited:RuntimeWarning",
 ]
 
 [tool.coverage.run]
