feat: add Stop hook to capture memories on normal session end
- Add src/neural_memory/hooks/stop.py — captures session memories when Claude
  Code session ends normally, using standard confidence threshold (not emergency)
- Add nmem-hook-stop pip entry point in pyproject.toml
- Refactor setup_hooks_claude() to install both PreCompact and Stop hooks in
  ~/.claude/settings.json via shared _find_hook_command() helper; idempotent
- Fix broken plugin manifest: create .claude-plugin/hooks/hooks.json which was
  referenced by plugin.json but did not exist

Closes the session-end memory loss gap identified in user feedback.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -124,6 +124,7 @@ neural-memory = "neural_memory.cli:main"
 nmem = "neural_memory.cli:main"
 nmem-mcp = "neural_memory.mcp:main"
 nmem-hook-pre-compact = "neural_memory.hooks.pre_compact:main"
+nmem-hook-stop = "neural_memory.hooks.stop:main"
 
 [tool.hatch.build.targets.sdist]
 include = [
