feat: v2.17.0 — tool memory + comprehensive audit fixes
Tool Memory (new feature):
- Add MemoryType.TOOL + SynapseType.EFFECTIVE_FOR/USED_WITH for tool usage tracking
- PostToolUse hook captures MCP tool calls to JSONL buffer (<50ms, no SQLite)
- Processing engine builds USED_WITH (co-occurrence) and EFFECTIVE_FOR (task) synapses
- SQLite tool_events table with schema migration v18→v19
- ToolMemoryConfig in unified_config (opt-in, disabled by default)
- Integration with consolidation pipeline (PROCESS_TOOL_EVENTS strategy)

Audit fixes (4 CRITICAL, 8 HIGH, 12 MEDIUM):
- CRITICAL: auth guard on consolidation routes, CORS wildcard removal,
  path traversal fix in db_train_handler, CI coverage threshold 67→70%
- Security: reject request.client=None, sanitize str(e) error leaks,
  Windows ACL key protection, FalkorDB password config warning
- Performance: regex caching (lru_cache + module-level compile),
  cached QueryRouter/MemoryEncryptor, asyncio.gather for embeddings,
  batch neuron delete, SQL FILTER clause combining queries
- Infrastructure: .dockerignore, .env.example, .gitignore secrets,
  TLS warning for 0.0.0.0, cursor context managers, bounded export,
  asyncio.Lock for storage cache, silent exception logging

--- a/.gitignore
+++ b/.gitignore
@@ -159,6 +159,11 @@ logs/
 .neural_memory/
 .claude/
 
+# Secrets / runtime config (defence-in-depth)
+config.toml
+*.key
+.env
+
 # spaCy models
 en_core_web_sm/
 en_core_web_md/
