--- a/pyproject.toml
+++ b/pyproject.toml
@@ -83,6 +83,14 @@ graphiti = [
 llamaindex = [
     "llama-index-core>=0.10.0",
 ]
+extract = [
+    "pymupdf4llm>=0.0.10",
+    "python-docx>=1.0",
+    "python-pptx>=0.6.23",
+    "beautifulsoup4>=4.12",
+    "markdownify>=0.11",
+    "openpyxl>=3.1",
+]
 embeddings = [
     "sentence-transformers>=2.0",
 ]
@@ -223,6 +231,12 @@ module = [
     "cognee.*",
     "graphiti_core.*",
     "llama_index.*",
+    "pymupdf4llm.*",
+    "docx.*",
+    "pptx.*",
+    "bs4.*",
+    "markdownify.*",
+    "openpyxl.*",
 ]
 ignore_missing_imports = true
 
